--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-scripts": "^5.0.1",
     "swr": "^1.3.0",
     "ts-jest": "^28.0.4",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "zod": "^3.17.10"
   }
 }
