--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "react-twitch-provider",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "scripts": {
     "build": "tsc",
     "start": "react-scripts start",
+    "mock-api": "twitch mock-api start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src",
