--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "react-scripts start",
     "mock-api": "twitch mock-api start",
-    "test": "react-scripts test",
+    "test": "react-scripts test --testURL=http://localhost:8080",
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "lint:fix": "yarn lint --fix",
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^28.1.1",
     "@types/react": "^18.0.15",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
@@ -45,8 +46,6 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "jest": "^28.1.1",
-    "jest-canvas-mock": "^2.4.0",
-    "jest-environment-jsdom": "^28.1.1",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
