--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,7 @@
 {
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  },
+  "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "eslint.probe": [
-      "javascript",
-      "javascriptreact",
-  ],
-  "editor.formatOnSave": false,
-  "editor.codeActionsOnSave": [
-    "source.formatDocument",
-    "source.fixAll.eslint"
-  ],
-  "vetur.validation.template": false
 }
