--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:fix": "eslint --fix .",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "format": "yarn prettier:fix && yarn lint:fix"
+    "format": "yarn prettier:fix && yarn lint:fix",
+    "prepare": "husky install"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -62,6 +63,7 @@
     "swr": "^1.3.0",
     "ts-jest": "^28.0.4",
     "typescript": "^4.7.3",
-    "zod": "^3.17.10"
+    "zod": "^3.17.10",
+    "husky": "^8.0.0"
   }
 }
