--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "react-twitch-provider",
   "version": "0.1.0",
-  "private": true,
+  "description": "A Twitch provider to easily access your Twitch account.",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vscav/react-twitch-provider.git"
+  },
   "proxy": "http://localhost:8080",
   "scripts": {
-    "build": "tsc",
-    "start": "react-scripts start",
+    "build": "yarn build:esm && yarn build:cjs",
+    "build:esm": "tsc",
+    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "mock-api": "twitch mock-api start",
     "test": "react-scripts test --testURL=http://localhost:8080",
     "lint": "eslint .",
@@ -13,14 +21,20 @@
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "format": "yarn prettier:fix && yarn lint:fix",
-    "prepare": "husky install"
+    "prepare": "husky install && yarn build"
   },
   "peerDependencies": {
     "react": ">=16"
   },
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
   "keywords": [
     "react",
-    "typescript"
+    "typescript",
+    "package"
   ],
   "author": "Vincent Scavinner",
   "license": "MIT",
@@ -42,6 +56,10 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "swr": "^1.3.0",
+    "zod": "^3.17.10"
+  },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^8.0.1",
@@ -49,7 +67,6 @@
     "@types/react": "^18.0.15",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
-    "cross-fetch": "^3.1.5",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -60,10 +77,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "^5.0.1",
-    "swr": "^1.3.0",
     "ts-jest": "^28.0.4",
     "typescript": "^4.7.3",
-    "zod": "^3.17.10",
     "husky": "^8.0.0"
   }
 }
