--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,25 @@
 {
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "exclude": [
     "dist",
     "node_modules"
   ],
-  "types": ["react/next", "react-dom/next"],
+  "types": [
+    "react/next",
+    "react-dom/next"
+  ],
   "compilerOptions": {
     "module": "esnext",
-    "lib": ["dom", "esnext"],
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "importHelpers": true,
     "declaration": true,
     "sourceMap": true,
-    "rootDir": "./src",
+    "rootDir": "src",
     "outDir": "./dist/esm",
     "strict": true,
     "noImplicitReturns": true,
