--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "build": "yarn build:esm && yarn build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
-    "mock-api": "twitch mock-api start",
-    "test": "react-scripts test --testURL=http://localhost:8080",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "prettier": "prettier --check .",
@@ -61,6 +61,7 @@
     "zod": "^3.17.10"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^28.1.1",
@@ -72,13 +73,15 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "husky": "^8.0.0",
     "jest": "^28.1.1",
+    "jest-environment-jsdom": "^29.1.2",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "^5.0.1",
     "ts-jest": "^28.0.4",
-    "typescript": "^4.7.3",
-    "husky": "^8.0.0"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.3"
   }
 }
