feat: use path alias for lib modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-  }
+  },
+  "extends": "./tsconfig.paths.json"
 }
