--- a/package.json
+++ b/package.json
@@ -69,10 +69,14 @@
     "husky": "^8.0.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^29.1.2",
+    "jest-mock-console": "^2.0.0",
+    "msw": "^0.47.3",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
+    "react-dom": "^18.2.0",
     "ts-jest": "^28.0.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "whatwg-fetch": "^3.6.2"
   }
 }
